upgraded sbt version and spark